  * Added Invert Mouse option to startup dialog
  * Changed default Up/Down keys to Q/Z
  * Some changes to compile versus Java 1.5 instead of 1.6, for PPC OSX
    users

Minecraft X-Ray 2.7 Maintenance Branch 9 (2011.02.22)

  * Snow will render more properly (as a thin slice) now
  * Ice is now considered water, and won't cause you to see through terrain
    if it's right up against the ground
  * Player spawnpoints/locations were off by 1 on the Z axis; fixed that
  * Support for Beta 1.3 Region format for chunk storage
  * (internal) changed class name to com.apocalyptech.minecraft.xray
  * Ignore blocks generated by the More Block IDs mod, rather than dying
  * Fixed Minecraft data directory detection on a corner case (possibly
    just for people using the Administrator account in XP)
  * Resolution dialog will show any valid world directory inside the
    "saves" dir, instead of just those of the form WorldN
  * Updated redstone rendering for Minecraft Beta 1.3 (redstone still
    doesn't actually "link up" though)
  * Support for Beta 1.3 additions: extra slab blocks, beds, redstone
    repeaters, and the BurningSkull painting
  * Fixed and added various wrong/missing minimap colors

Minecraft X-Ray 2.7 Maintenance Branch 8 (2011.01.26)

  * Removed useless "antialiasing" option on startup dialog
  * Startup dialog will remember your previously-chosen options
  * Water rendering can be toggled with "T"
  * Camera can be locked onto the Y axis with "L"
  * Water and fire should render properly regardless of texture pack
  * Fixed a bug where changes to the draw distance wouldn't get
    updated if ore highlighting was turned off
  * Ore highlights can be specified in the properties file now
  * Multiplayer camera presets are now sorted by username
  * Highlight (in green) areas near torches with "E"
  * Updated texture info for Jukeboxes and Workbenches
  * Manually throttle back FPS when we don't have focus, or are offscreen