@@ -2,6 +2,7 @@
   * Changed default Up/Down keys to Q/Z
   * Some changes to compile versus Java 1.5 instead of 1.6, for PPC OSX
     users
+  * Added a dialog to jump directly to a position, with a default key of J
 
 Minecraft X-Ray 2.7 Maintenance Branch 9 (2011.02.22)
 
